<resources>
    <string name="app_name">FJB Telyu App</string>
    <string name="page_title">FJB Telyu App</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notif">Notif</string>
    <string name="person">Person</string>
    <string name="hello_world">Hello World</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home Fragment</string>
    <string name="notif_fragment">Notif Fragment</string>
    <string name="person_fragment">Person Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="style">justStyle</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="nama_pengguna">Imam Yabunaiya</string>
    <string name="chat">Chat</string>
    <string name="beli_barang">Beli Barang</string>
    <string name="jual_barang">Jual Barang</string>
    <string name="message">Message</string>
    <string name="wishlist">Wishlist</string>
    <string name="transaksi">Transaksi</string>
    <string name="histori">Histori</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen">SplashScreen</string>

</resources>