<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".ui.home.HomeFragment"    android:background="@drawable/img_new">    <!-- TODO: Update blank fragment layout -->    <TextView        android:id="@+id/selamat_datang"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/selamat_datang"        android:textColor="@color/white"        android:textSize="17sp"        android:layout_marginTop="32dp"        android:layout_marginStart="32dp"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/name"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/nama_pengguna"        android:textColor="@color/white"        android:textSize="32sp"        android:textStyle="bold"        app:layout_constraintTop_toBottomOf="@id/selamat_datang"        app:layout_constraintStart_toStartOf="@+id/selamat_datang"        />    <androidx.constraintlayout.widget.Guideline        android:id="@+id/tengah_tengah"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="horizontal"        app:layout_constraintGuide_percent="0.5" />    <GridLayout        android:id="@+id/gridLayout"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:rowCount="2"        android:columnCount="4"        app:layout_constraintTop_toBottomOf="@id/tengah_tengah"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:orientation="horizontal"        app:useDefaultMargins="true"        >        <com.google.android.material.floatingactionbutton.FloatingActionButton            android:id="@+id/floating_chat"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginStart="10dp"            android:layout_marginEnd="10dp"            android:contentDescription="@string/chat"            app:backgroundTint="@color/Primary"            app:fabCustomSize="60dp"            app:srcCompat="@drawable/chat"            app:tint="@color/white" />        <com.google.android.material.floatingactionbutton.FloatingActionButton            android:id="@+id/floating_search"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginStart="10dp"            android:layout_marginEnd="10dp"            android:contentDescription="@string/chat"            app:backgroundTint="@color/Primary"            app:fabCustomSize="60dp"            app:srcCompat="@drawable/view_list"            app:tint="@color/white" />        <com.google.android.material.floatingactionbutton.FloatingActionButton            android:id="@+id/floating_notif"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginStart="10dp"            android:layout_marginEnd="10dp"            android:contentDescription="@string/chat"            app:backgroundTint="@color/Primary"            app:fabCustomSize="60dp"            app:srcCompat="@drawable/money"            app:tint="@color/white" />        <com.google.android.material.floatingactionbutton.FloatingActionButton            android:id="@+id/floating_person"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginStart="10dp"            android:layout_marginEnd="10dp"            android:contentDescription="@string/chat"            app:backgroundTint="@color/Primary"            app:fabCustomSize="60dp"            app:srcCompat="@drawable/history"            app:tint="@color/white" />        <TextView            android:id="@+id/labelMessage"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/message"            android:layout_gravity="center_horizontal"            android:layout_marginTop="5dp"            android:layout_marginStart="10dp"            android:layout_marginEnd="10dp"            app:layout_row="0" />        <TextView            android:id="@+id/labelWishlist"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/wishlist"            android:layout_gravity="center_horizontal"            android:layout_marginTop="5dp"            android:layout_marginStart="10dp"            android:layout_marginEnd="10dp"            app:layout_row="0" />        <TextView            android:id="@+id/labelTransaksi"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/transaksi"            android:layout_gravity="center_horizontal"            android:layout_marginTop="5dp"            android:layout_marginStart="10dp"            android:layout_marginEnd="10dp"            app:layout_row="0" />        <TextView            android:id="@+id/labelHistory"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/histori"            android:layout_gravity="center_horizontal"            android:layout_marginTop="5dp"            android:layout_marginStart="10dp"            android:layout_marginEnd="10dp"            app:layout_row="0" />    </GridLayout>    <Button        android:id="@+id/beli_button"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="32dp"        android:layout_marginEnd="32dp"        android:text="@string/beli_barang"        android:layout_marginTop="32dp"        app:layout_constraintTop_toBottomOf="@+id/gridLayout"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"/>    <Button        android:id="@+id/jual_button"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="32dp"        android:layout_marginEnd="32dp"        android:text="@string/jual_barang"        android:layout_marginTop="16dp"        app:layout_constraintTop_toBottomOf="@+id/beli_button"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"/></androidx.constraintlayout.widget.ConstraintLayout>